--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 @import "./components/breakpoints";
 @import "./components/varibles";
 @import "./components/components";
+@import "./components/animation";
 @import "./components/navmenu";
 
 // TEMPLATES
